<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="willard.cis46300.pridepass.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PUsername"
        android:hint="@string/hintName"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        android:layout_above="@+id/PPassword"
        android:layout_alignEnd="@+id/PPassword"
        android:layout_alignStart="@+id/PPassword"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PPassword"
        android:hint="@string/hintPassword"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        android:layout_above="@+id/cbRememberMe"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:id="@+id/cbRememberMe"
        android:layout_above="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_marginEnd="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/PPassword"
        android:layout_alignEnd="@+id/PPassword" />
</RelativeLayout>
